cmake_minimum_required(VERSION 3.10)
add_executable(test_full_delivery test_full_delivery.cpp)
add_proto_dependency(test_full_delivery)
target_include_directories(test_full_delivery PUBLIC "${CMAKE_CURRENT_LIST_DIR}/../")
target_link_libraries(test_full_delivery network)
target_link_libraries(test_full_delivery kapacitor_input)
my_target_link_cpprest(test_full_delivery)
